BuildProgram can use a different Libtool .la file
Until now, BuildProgram could only use the installed `libgnuastro.la'
file. This caused a failure when Gnuastro wasn't already installed on the
system and the user ran `make check'. However, this test `PASS'ed, because
there was no check to see if `libtool' fails in BuildProgram!

With this commit, both these issues are fixed: if `libtool' fails (for any
reason, including not finding the `.la' file), it will abort with a message
and it is now possible to identify a different `.la' file to use instead of
the default one (with the `--la' option).

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,9 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   All programs: a value of `0' to the `--numthreads' option will use the
   number of threads available to the system at run time.
 
+  BuildProgram: The new `--la' option allows the identification of a
+  different Libtool `.la' file for Libtool linking information.
+
   Fits: when an extension/HDU is identified on the command-line with the
   `--hdu' option and no operation is requested, the full list of header
   keywords in that HDU will be printed (as if only `--printallkeys' was
@@ -68,7 +71,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
   NoiseChisel segfault when memory mapping to a file (bug #52043).
 
-
+  CFITSIO 3.42 and libcurl crash at Gnuastro configure time (bug #52152).
 
 
 
